--- a/src/ECInterfaces/ECInterfaces.csproj
+++ b/src/ECInterfaces/ECInterfaces.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2935E02F-43ED-4670-9A00-A91B0AD3D66C}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,6 +63,7 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="encConv.snk" />
     <None Include="FieldWorks.snk" />
     <None Include="SILMappingRegistry.xsd">
       <SubType>Designer</SubType>
