--- a/src/SilIndicEncConverters/SilIndicEncConverters.csproj
+++ b/src/SilIndicEncConverters/SilIndicEncConverters.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{DC0A7A02-87B7-4619-B45F-D5A3ECB599A9}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -103,6 +103,7 @@
     <Compile Include="TechHindiSiteEncConverter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="encConv.snk" />
     <None Include="FieldWorks.snk" />
   </ItemGroup>
   <ItemGroup>
