--- a/src/ECInterfaces/ECInterfaces.csproj
+++ b/src/ECInterfaces/ECInterfaces.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -63,7 +63,6 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="encConv.snk" />
     <None Include="FieldWorks.snk" />
     <None Include="SILMappingRegistry.xsd">
       <SubType>Designer</SubType>
