--- a/src/CcEC/CcEC.csproj
+++ b/src/CcEC/CcEC.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CcAutoConfigDialog.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="CcAutoConfigDialog.designer.cs">
       <DependentUpon>CcAutoConfigDialog.cs</DependentUpon>
@@ -78,7 +79,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="encConv.snk" />
     <None Include="FieldWorks.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
