--- a/src/IcuEC/IcuEC.csproj
+++ b/src/IcuEC/IcuEC.csproj
@@ -50,22 +50,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IcuConvAutoConfigDialog.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="IcuConvConfig.cs" />
     <Compile Include="IcuConvEncConverter.cs" />
     <Compile Include="IcuRegexAutoConfigDialog.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="IcuRegexConfig.cs" />
     <Compile Include="IcuRegexEncConverter.cs" />
     <Compile Include="IcuTranslitAutoConfigDialog.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="IcuTranslitConfig.cs" />
     <Compile Include="IcuTranslitEncConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources.resx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ECInterfaces\ECInterfaces.csproj">
@@ -76,6 +76,9 @@
       <Project>{3E4B908A-4F96-43C5-981B-1AA4B73CCC26}</Project>
       <Name>EncCnvtrs</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
