--- a/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
@@ -60,6 +60,10 @@
     <Reference Include="nunit.framework, Version=2.4.7.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
+      <Package>nunit</Package>
+    </Reference>
+    <Reference Include="CodePageEC">
+      <HintPath>..\..\output\Debug\CodePageEC.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
