--- a/src/TestEncCnvtrs/TestEncCnvtrs.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs.csproj
@@ -46,7 +46,8 @@
   <ItemGroup>
     <Reference Include="nunit.framework">
       <Private>True</Private>
-      <HintPath>C:\WW\Bin\NUnit\bin\nunit.framework.dll</HintPath>
+      <!--<HintPath>C:\WW\Bin\NUnit\bin\nunit.framework.dll</HintPath>-->
+      <HintPath>/usr/lib/cli/nunint.framework-2.5/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="SilEncConverters40">
