--- a/src/PyScriptEC/PyScriptEncConverter.vcproj
+++ b/src/PyScriptEC/PyScriptEncConverter.vcproj
@@ -112,7 +112,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="D:\Python27\include"
+				AdditionalIncludeDirectories="D:\Python27\include;..\EncCnvtrs\lib"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
