--- a/src/PyScriptEC/PyScriptEC.csproj
+++ b/src/PyScriptEC/PyScriptEC.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,7 +52,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PyScriptAutoConfigDialog.cs">
-      <SubType>Form</SubType>
     </Compile>
     <Compile Include="PyScriptEncConverter.cs" />
     <Compile Include="PyScriptEncConverterConfig.cs" />
