--- a/src/CodePageEC/windows/CodePageEC 2010.csproj
+++ b/src/CodePageEC/windows/CodePageEC 2010.csproj
@@ -5,19 +5,21 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4704F67B-246D-483C-B840-231F42D7A12B}</ProjectGuid>
+    <ProjectGuid>{48A1EC6E-A358-4E7F-AE68-3D62327FDBEA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PerlExpressionEC</RootNamespace>
-    <AssemblyName>PerlExpressionEC</AssemblyName>
+    <RootNamespace>CodePageEC</RootNamespace>
+    <AssemblyName>CodePageEC</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>FieldWorks.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\output\debug\</OutputPath>
+    <OutputPath>..\..\..\output\debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,11 +29,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\output\release\</OutputPath>
+    <OutputPath>..\..\..\output\release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,26 +51,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PerlExpressionAutoConfigDialog.cs">
+    <Compile Include="CpAutoConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PerlExpressionEncConverter.cs" />
-    <Compile Include="PerlExpressionEncConverterConfig.cs" />
+    <Compile Include="CpAutoConfigDialog.Designer.cs">
+      <DependentUpon>CpAutoConfigDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CpEncConverter.cs" />
+    <Compile Include="CpEncConverterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources.resx" />
+    <EmbeddedResource Include="CpAutoConfigDialog.resx">
+      <DependentUpon>CpAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ECInterfaces\ECInterfaces.csproj">
+    <ProjectReference Include="..\..\ECInterfaces\ECInterfaces.csproj">
       <Project>{2935E02F-43ED-4670-9A00-A91B0AD3D66C}</Project>
       <Name>ECInterfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\EncCnvtrs\EncCnvtrs.csproj">
+    <ProjectReference Include="..\..\EncCnvtrs\EncCnvtrs.csproj">
       <Project>{3E4B908A-4F96-43C5-981B-1AA4B73CCC26}</Project>
       <Name>EncCnvtrs</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="FieldWorks.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
