--- a/src/PyScriptEC/PyScriptEC.csproj
+++ b/src/PyScriptEC/PyScriptEC.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PyScriptAutoConfigDialog.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="PyScriptEncConverter.cs" />
     <Compile Include="PyScriptEncConverterConfig.cs" />
