--- a/src/EncCnvtrs/EncCnvtrs.csproj
+++ b/src/EncCnvtrs/EncCnvtrs.csproj
@@ -111,11 +111,11 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AutoConfigDialog.cs">
+    <Compile Include="AutoConfigDialogWin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AutoConfigDialog.Designer.cs">
-      <DependentUpon>AutoConfigDialog.cs</DependentUpon>
+    <Compile Include="AutoConfigDialogWin.Designer.cs">
+      <DependentUpon>AutoConfigDialogWin.cs</DependentUpon>
     </Compile>
     <Compile Include="CcAutoConfigDialog.cs">
       <SubType>Form</SubType>
@@ -211,8 +211,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TecEncConverterConfig.cs" />
-    <EmbeddedResource Include="AutoConfigDialog.resx">
-      <DependentUpon>AutoConfigDialog.cs</DependentUpon>
+    <EmbeddedResource Include="AutoConfigDialogWin.resx">
+      <DependentUpon>AutoConfigDialogWin.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CcAutoConfigDialog.resx">
