--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -111,7 +111,9 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AutoConfigDialogWin.cs" />
+    <Compile Include="AutoConfigDialogWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AutoConfigDialogWin.Designer.cs">
       <DependentUpon>AutoConfigDialogWin.cs</DependentUpon>
     </Compile>
