Get TestEncCnvtrs project to build (and run) successfully.
Also a minor tweak to the IcuEC 2010 project -- there's no COM involved.

--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -38,7 +38,7 @@
     <OutputPath>..\..\output\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <RegisterForComInterop>true</RegisterForComInterop>
+    <RegisterForComInterop>false</RegisterForComInterop>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisLogFile>..\..\output\debug\IcuEC.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
