--- a/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
@@ -78,9 +78,6 @@
     <Reference Include="ECInterfaces">
       <HintPath>..\..\output\Debug\ECInterfaces.dll</HintPath>
     </Reference>
-    <Reference Include="IcuEC">
-      <HintPath>..\IcuEC\bin\Debug\IcuEC.dll</HintPath>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
@@ -101,5 +98,11 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IcuEC\IcuEC 2010.csproj">
+      <Project>{D1BAE593-A552-4F1A-8B08-5A1C27875C2F}</Project>
+      <Name>IcuEC 2010</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
