--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,10 @@
 Source: enc-converters
 Priority: optional
 Maintainer: Stephen McConnel <stephen_mcconnel@sil.org>
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6), mono-devel
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev, python-dev (>=2.6), mono-devel, libicu-dev
 Standards-Version: 3.8.4
 Section: libs
 Homepage: http://hg.palaso.org/ec-main
-#Vcs-Git: git://git.debian.org/collab-maint/enc-converters.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/enc-converters.git;a=summary
 
 Package: enc-converters
 Section: libs
@@ -14,4 +12,5 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: fieldworks
 Description: Encoding Converter libraries.
- This needs a much better description than what I can provide.
+ This provides a uniform interface to a variety of character encoding
+ converters.
