--- a/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs-mono.csproj
@@ -57,10 +57,8 @@
     <Reference Include="IcuEC">
       <HintPath>..\..\output\Debug\IcuEC.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.4.7.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <Private>False</Private>
-      <SpecificVersion>False</SpecificVersion>
-      <Package>nunit</Package>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\..\..\..\..\usr\lib\mono\gac\nunit.framework\2.5.10.0__96d09a1eb7f44a77\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
