--- a/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E13305E0-0AC9-4181-A9AD-3B9B0A479087}</ProjectGuid>
@@ -77,9 +77,6 @@
     </Reference>
     <Reference Include="ECInterfaces">
       <HintPath>..\..\output\Debug\ECInterfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="IcuEC">
-      <HintPath>..\IcuEC\bin\Debug\IcuEC.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
